[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/UITitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/UIButtonFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/LevelCompleteMenu.gd" type="Script" id=3]

[node name="LevelCompleteMenuPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 60.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "Level Complete"
align = 1
valign = 1

[node name="NextButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -63.0
margin_right = 55.0
margin_bottom = -27.0
custom_fonts/font = ExtResource( 2 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -18.0
margin_right = 55.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = 27.0
margin_right = 55.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
